--- a/LOOS_DSC510/Assignment 8.1
+++ b/LOOS_DSC510/Assignment 8.1
@@ -1,3 +1,8 @@
+#Gettysburg Dictionary
+#File: Assignment 8.1
+#Name: Michael Loos
+#Date: 1/27/2020
+
 import string
 
 def add_word(word,dictionary): 
