--- a/HA_DSC510/Interest_8_2.ipynb
+++ b/HA_DSC510/Interest_8_2.ipynb
@@ -1,15 +1,520 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
+   "source": [
+    "# Tuple \n",
+    "\n",
+    "A tuple is very similar to a list. You will see a lot of similarity between tuple and list in syntax and usage. Then, when we want to use a tuple as opposed to a list. The main difference between a tuple and a list is performance. Because a tuple is immutable (users can't change its values) so that operation on a tuple is a lot faster than a list. A tuple can be created in following way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
+    "# Assignment\n",
+    "james = (175, 70, '999-999-99999', ['apple', 'banana', 'peach'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "When creating a tuple with one item or without any item, we should use comma in a parenthesis as shown below"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tuple"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "tuple_w_one = (165,)\n",
+    "type(tuple_w_one)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "int"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "# Not tuple\n",
+    "not_tuple = (165)\n",
+    "type(not_tuple)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tuple"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "# Create a tuple using parenthesis\n",
+    "empty_tuple = ()\n",
+    "type(empty_tuple)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tuple"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 42
+    }
+   ],
+   "source": [
+    "# Create a tuple using function \n",
+    "empty_tuple = tuple()\n",
+    "type(empty_tuple)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You can access to the items of the tuple as follows:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(175, 70, '999-999-99999', ['apple', 'banana', 'peach'])\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# Access entire tuple\n",
+    "print(james)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "175\n",
+      "['apple', 'banana', 'peach']\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# Access an item\n",
+    "print(james[0])\n",
+    "print(james[-1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(175,)\n",
+      "(175, 70)\n",
+      "('999-999-99999', ['apple', 'banana', 'peach'])\n",
+      "(175, 70, '999-999-99999', ['apple', 'banana', 'peach'])\n",
+      "['apple', 'banana', 'peach']\n",
+      "(70, '999-999-99999')\n",
+      "()\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# Access a range of items\n",
+    "print(james[0:1])\n",
+    "print(james[0:2])\n",
+    "print(james[2:4])\n",
+    "print(james[0:])\n",
+    "print(james[-1])\n",
+    "print(james[-3:-1])\n",
+    "print(james[-1:-3]) # This does not print any value"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As mentioned earlier, users can't change any value in tuple. Also, we will not be able to add/remove values from the tuple."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-07c45512f060>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mjames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'New'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjames\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ],
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "james[1] = 'New'\n",
+    "print(james)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In order to change a value in tuple, the workaround is that first convert the tuple to a list, change values, then re-convert to a tuple."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(175, 100, '999-999-99999', ['apple', 'banana', 'peach'])\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "james = list(james)\n",
+    "james[1] = 100\n",
+    "james = tuple(james)\n",
+    "print(james)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "But you can change values of a list in a tuple."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(175, 100, '999-999-99999', ['melon', 'banana', 'peach'])\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "james[3][0] = 'melon'\n",
+    "print(james)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Since list and tuple is a sequential data structure, users can loop through list and tuple using for statement. "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "175\n",
+      "100\n",
+      "999-999-99999\n",
+      "['apple', 'banana', 'peach']\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "for value in james:\n",
+    "    print(value)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can check if an item exist in the tuple using `in`."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Found values!\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "if 175 in james:\n",
+    "    print('Found values!')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The length of the tuple can be found using `len`."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "len(james)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Joining two tuple can be done using `+` operator."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "175\n",
+      "100\n",
+      "999-999-99999\n",
+      "['melon', 'banana', 'peach']\n",
+      "154\n",
+      "45\n",
+      "999-999-9999\n",
+      "['grape', 'pineapple']\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "jamie = (154,45,'999-999-9999',['grape','pineapple'])\n",
+    "joined = james + jamie\n",
+    "for value in joined:\n",
+    "    print(value)\n",
+    "\n",
+    "\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   }
  ],
  "metadata": {
@@ -29,6 +534,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
