--- a/HA_DSC510/Interest_8_2.ipynb
+++ b/HA_DSC510/Interest_8_2.ipynb
@@ -17,202 +17,208 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Assignment\n",
     "james = (175, 70, '999-999-99999', ['apple', 'banana', 'peach'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "When creating a tuple with one item or without any item, we should use comma in a parenthesis as shown below"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "When creating a tuple with one item or without any item, we should use comma in a parenthesis as shown below"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "tuple"
+      "text/plain": [
+       "tuple"
+      ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 37
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "tuple_w_one = (165,)\n",
     "type(tuple_w_one)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "int"
+      "text/plain": [
+       "int"
+      ]
      },
+     "execution_count": 44,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 44
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Not tuple\n",
     "not_tuple = (165)\n",
     "type(not_tuple)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "tuple"
+      "text/plain": [
+       "tuple"
+      ]
      },
+     "execution_count": 43,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 43
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a tuple using parenthesis\n",
     "empty_tuple = ()\n",
     "type(empty_tuple)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "tuple"
+      "text/plain": [
+       "tuple"
+      ]
      },
+     "execution_count": 42,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 42
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a tuple using function \n",
     "empty_tuple = tuple()\n",
     "type(empty_tuple)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "You can access to the items of the tuple as follows:"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "You can access to the items of the tuple as follows:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(175, 70, '999-999-99999', ['apple', 'banana', 'peach'])\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "# Access entire tuple\n",
     "print(james)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "175\n",
       "['apple', 'banana', 'peach']\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "# Access an item\n",
     "print(james[0])\n",
     "print(james[-1])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(175,)\n",
       "(175, 70)\n",
@@ -221,8 +227,7 @@
       "['apple', 'banana', 'peach']\n",
       "(70, '999-999-99999')\n",
       "()\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -234,77 +239,73 @@
     "print(james[-1])\n",
     "print(james[-3:-1])\n",
     "print(james[-1:-3]) # This does not print any value"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "As mentioned earlier, users can't change any value in tuple. Also, we will not be able to add/remove values from the tuple."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "As mentioned earlier, users can't change any value in tuple. Also, we will not be able to add/remove values from the tuple."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-19-07c45512f060>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mjames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'New'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjames\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ],
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
     "james[1] = 'New'\n",
     "print(james)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "In order to change a value in tuple, the workaround is that first convert the tuple to a list, change values, then re-convert to a tuple."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "In order to change a value in tuple, the workaround is that first convert the tuple to a list, change values, then re-convert to a tuple."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(175, 100, '999-999-99999', ['apple', 'banana', 'peach'])\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -312,180 +313,173 @@
     "james[1] = 100\n",
     "james = tuple(james)\n",
     "print(james)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "But you can change values of a list in a tuple."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "But you can change values of a list in a tuple."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(175, 100, '999-999-99999', ['melon', 'banana', 'peach'])\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "james[3][0] = 'melon'\n",
     "print(james)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Since list and tuple is a sequential data structure, users can loop through list and tuple using for statement. "
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Since list and tuple is a sequential data structure, users can loop through list and tuple using for statement. "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "175\n",
       "100\n",
       "999-999-99999\n",
       "['apple', 'banana', 'peach']\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "for value in james:\n",
     "    print(value)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "We can check if an item exist in the tuple using `in`."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "We can check if an item exist in the tuple using `in`."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Found values!\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "if 175 in james:\n",
     "    print('Found values!')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The length of the tuple can be found using `len`."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "The length of the tuple can be found using `len`."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "4"
+      "text/plain": [
+       "4"
+      ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "len(james)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Joining two tuple can be done using `+` operator."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Joining two tuple can be done using `+` operator."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "175\n",
       "100\n",
@@ -495,24 +489,27 @@
       "45\n",
       "999-999-9999\n",
       "['grape', 'pineapple']\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "jamie = (154,45,'999-999-9999',['grape','pineapple'])\n",
     "joined = james + jamie\n",
     "for value in joined:\n",
-    "    print(value)\n",
-    "\n",
-    "\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In summary, tuple is not good for data processing because users can't modify tuple and there are not many useful methods. However, it's very useful in such case:\n",
+    "● user wants a reference table that can't be changed. For example, a list of States in the US shouldn't be changed.\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%% md\n"
     }
    }
   }
@@ -526,14 +523,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
@@ -546,5 +543,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
