--- a/HA_DSC510/Interest_8_2.ipynb
+++ b/HA_DSC510/Interest_8_2.ipynb
@@ -502,7 +502,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In summary, tuple is not good for data processing because users can't modify tuple and there are not many useful methods. However, it's very useful in such case that user wants a reference table that can't be changed. For example, a list of States in the US shouldn't be changed.\n",
+    "In summary, tuple is not good for data processing because users can't modify tuple and there are not many useful methods. However, it's very useful in such case that user wants a reference table that can't be changed. For example, a list of States in the US shouldn't be changed."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "References  \n",
+    "Beazley, D. & Jones, B. K. (2013). Python Cookbook. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Mitchell, Ryan (2015). Web Scraping with Python. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf  \n",
+    "https://www.w3schools.com/python/default.asp  \n",
     "\n"
    ],
    "metadata": {
